--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10928,3 +10928,166 @@ a.text-dark:focus {
   }
 }
 
+html {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+  box-sizing: inherit;
+  background-color: lightblue;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  line-height: 2;
+}
+
+/*VARIABLES*/
+
+:root {
+  --color-base: #0761cf;
+  --bg-primary: #eff1f3;
+  --bg-secundary: #2c2f33;
+  --shadow-element: 0 5px 10px rgba(14, 30, 37, 0.16);
+  --font-parrafo: #6e767e;
+}
+
+/*GLOBALES*/
+
+h1 {
+  font-size: 30px;
+  text-shadow: 1px 2px 3px rgba(59, 57, 80, 0.2);
+}
+
+h2 {
+  font-size: 26px;
+  text-shadow: 1px 2px 3px rgba(59, 57, 80, 0.2);
+}
+
+h3 {
+  font-size: 22px;
+}
+
+h4 {
+  font-size: 18px;
+}
+
+p {
+  color: var(--font-parrafo);
+}
+
+.contenedor-img {
+  width: 35%;
+  margin: auto;
+}
+
+.contenedor-img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
+h1 {
+  text-align: center;
+  text-transform: capitalize;
+}
+
+.contenedor-box {
+  width: 40%;
+  margin: 20px auto;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.contenedor-box .box {
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+  box-shadow: var(--shadow-element);
+  background-color: #F9A826;
+}
+
+.contenedor-box .box .box-number,
+.contenedor-box .box .box-time {
+  text-align: center;
+  color: #fff;
+}
+
+footer {
+  width: 40%;
+  margin: 15px auto;
+  display: flex;
+  justify-content: center;
+}
+
+footer .redes-sociales {
+  width: 20%;
+  margin-right: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+footer .redes-sociales .red-social a {
+  text-decoration: none;
+  color: #000;
+}
+
+footer .redes-sociales .red-social i {
+  font-size: 24px;
+  transition: all 0.4s;
+}
+
+footer .redes-sociales .red-social a:hover i {
+  transform: scale(1.2);
+  color: #fff;
+}
+
+@media (max-width: 768px) {
+  h1 {
+    font-size: 24px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  h2 {
+    font-size: 20px;
+  }
+
+  h3 {
+    font-size: 18px;
+  }
+
+  p {
+    font-size: 14px;
+  }
+
+  .contenedor-img {
+    width: 100%;
+  }
+
+  .contenedor-box {
+    width: 80%;
+    justify-content: space-evenly;
+  }
+
+  .contenedor-box .box {
+    margin-bottom: 20px;
+  }
+
+  footer {
+    display: block;
+    width: 80%;
+  }
+
+  footer .redes-sociales,
+  footer .copy {
+    width: 100%;
+  }
+}
+
