s disenan secciones acerca de, servicios y hero

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -19,3 +19,13 @@ $teal: #4dc0b5;
 $cyan: #6cb2eb;
 
 
+/*VARIABLES*/
+:root {
+--color-fundacion-principal: #63b8a7;
+--color-fundacion-principal-dark: #264c5d;
+--color-fundacion-segundario: #4686c8;
+--color-fundacion-segundario-dark: #09427d;
+--box-shadow-cards: 0 15px 40px 0 rgba(0, 0, 0, 0.08);
+--box-shadow-element: 0 2rem 1.5rem -1.5rem rgba(33, 37, 41, 0.15),
+    0 0 1.5rem 0.5rem rgba(33, 37, 41, 0.05);
+}
