--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7,9 +7,9 @@
   --color-fundacion-principal-dark: #264c5d;
   --color-fundacion-segundario: #4686c8;
   --color-fundacion-segundario-dark: #09427d;
-  --box-shadow-cards: 0 15px 40px 0 rgba(0, 0, 0, 0.08);
-  --box-shadow-element: 0 2rem 1.5rem -1.5rem rgba(33, 37, 41, 0.15),
-      0 0 1.5rem 0.5rem rgba(33, 37, 41, 0.05);
+  --box-shadow-cards: 0px 1px 30px -2px rgba(0,0,0,0.2);
+  --box-shadow-element: 0px 2px 15px -2px rgba(0,0,0,0.2),
+                       0px 10px 13px -7px rgba(0,0,0,0.2);
 }
 
 /*!
@@ -10953,8 +10953,6 @@ body {
 *,
 *::after,
 *::before {
-  padding: 0;
-  margin: 0;
   box-sizing: inherit;
 }
 
@@ -11039,7 +11037,7 @@ a:hover {
   align-items: center;
   text-transform: uppercase;
   background-color: var(--color-fundacion-principal-dark);
-  transition: all 0.4s;
+  transition: box-shadow 0.4s;
   padding-right: 5px;
 }
 
@@ -11055,7 +11053,7 @@ a:hover {
 }
 
 .button:hover {
-  box-shadow: var(--box-shadow-cards);
+  box-shadow: var(--box-shadow-element);
   color: #ffffff;
 }
 
