--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -25,7 +25,7 @@ $cyan: #6cb2eb;
 --color-fundacion-principal-dark: #264c5d;
 --color-fundacion-segundario: #4686c8;
 --color-fundacion-segundario-dark: #09427d;
---box-shadow-cards: 0 15px 40px 0 rgba(0, 0, 0, 0.08);
---box-shadow-element: 0 2rem 1.5rem -1.5rem rgba(33, 37, 41, 0.15),
-    0 0 1.5rem 0.5rem rgba(33, 37, 41, 0.05);
+--box-shadow-cards: 0px 1px 30px -2px rgba(0,0,0,0.2);
+--box-shadow-element:0px 2px 15px -2px rgba(0,0,0,0.2),
+                     0px 10px 13px -7px rgba(0,0,0,0.2);
 }
