--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18,8 +18,6 @@ body {
 *,
 *::after,
 *::before {
-  padding: 0;
-  margin: 0;
   box-sizing: inherit;
 }
 
@@ -98,7 +96,7 @@ a:hover {
   align-items: center;
   text-transform: uppercase;  
   background-color: var(--color-fundacion-principal-dark);
-  transition: all .4s;
+  transition: box-shadow .4s;
   padding-right: 5px;
   i{
     width: 32px;
@@ -111,8 +109,7 @@ a:hover {
     color: var(--color-fundacion-principal-dark);
   }
   &:hover{
-    
-    box-shadow: var(--box-shadow-cards);
+    box-shadow: var(--box-shadow-element);
     color: #ffffff;
   }
 }
