se diseña seccion blog

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,11 +1,18 @@
 // Fonts
-@import url("https://fonts.googleapis.com/css?family=Nunito");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
 // Variables
 @import "variables";
 
+// import libreria animaciones diseño
+@import '~animate.css/animate.compat.css';
+
 // Bootstrap
 @import "~bootstrap/scss/bootstrap";
+
+// libreria de iconos
+@import '~font-awesome/scss/font-awesome';
+
 
 html {
     box-sizing: border-box;
